test/types/file/fwriteIntFailed.good
fwriteIntFailed.chpl:2: error: Invalid argument in file.writer with path "fwriteIntFailed.txt"
